add: shop and contact pages. wip: newsletter popup

--- a/contact.html
+++ b/contact.html
@@ -45,58 +45,60 @@
           </header>
 
 
-          <main id="main" class="careers" role="main">
+          <main id="main" class="contact" role="main">
 
-              <section id="intro" class="">
-                <div class="row center inner-width">
-                  <div class="column">
-                    <h1>
-                      Careers
-                    </h1>
-                    <h3>
-                      Help craft the next chapter of Robinsons Cannabis. We’re always looking
-                      for talented, passionate individuals to join our team. If no current
-                      openings match your qualifications or interest, please email us your cover
-                      letter and resume and let us know why you would make a great fit.
-                    </h3>
-                  </div>
+            <section id="intro" class="">
+              <div class="row center inner-width">
+                <div class="column">
+                  <h1>
+                    Contact
+                  </h1>
+                  <figure>
+                    <img src="images/Robinsons_map.jpg" alt="">
+                  </figure>
+                  <h3>
+                    Thank you for your interest. For all enquiries
+                    <br>
+                    regarding product, shipping, or operations, please follow
+                    <br>
+                    the most suitable contact method provided below.
+                  </h3>
                 </div>
-              </section>
+              </div>
+            </section>
 
-              <section id="jobs" class="inner-width">
-                <div class="row job">
-                    <div class="column _25">
-                      <p class="title">
-                        Executive
-                        Administrative Assistant
-                      </p>
-                    </div>
-                    <div class="column _75">
-                      <p class="description">
-                        We’re currently seeking an Executive Administrative Assistant to join our growing team on a part-time basis from date of hire until February 3, 2019. As of February 4, 2019, this role will become full-time in nature.
-                      </p>
-                      <p>
-                        View full job listing here
-                      </p>
-                    </div>
-                </div>
-                <div class="row job">
-                    <div class="column _25">
-                      <p class="title">
-                        Executive
-                        Administrative Assistant
-                      </p>
-                    </div>
-                    <div class="column _75">
-                      <p class="description">
-                        We’re currently seeking an Executive Administrative Assistant to join our growing team on a part-time basis from date of hire until February 3, 2019. As of February 4, 2019, this role will become full-time in nature.
-                      </p>
-                      <p>
-                        View full job listing here
-                      </p>
-                    </div>
-                </div>
-              </section>
+            <section id="contactinfo">
+              <ul class="row center inner-width">
+                <li>
+                  <p class="title">
+                    Address
+                  </p>
+                  <p>
+                    <a href="https://www.google.com/maps/place/Rockwell+Dr,+Kentville,+NS+B4N+3V7/@45.061756,-64.6155493,12z/data=!4m5!3m4!1s0x4b5850bfda789717:0xbfc5ecad0d3354ac!8m2!3d45.0618559!4d-64.5455166" target="_blank">
+                        61 Rockwell Drive, Kentville, Nova Scotia, Canada, B4N 3v7
+                    </a>
+                  </p>
+                </li>
+                <li>
+                  <p class="title">
+                    Enquiries
+                  </p>
+                  <p>
+                    <a href="mailto:info@robinsonscannabis.com">info@robinsonscannabis.com</a>, <a href="tel:+19029861864">1 ( 9o2 ) 986 1864</a>
+                  </p>
+                </li>
+                <li>
+                  <p class="title">
+                    Follow
+                  </p>
+                  <p>
+                    <a href="https://www.instagram.com/robinsonscannabis/">Instagram</a>,
+                    <a href="https://twitter.com/robinsonscanna?lang=en">Twitter</a>,
+                    <a href="https://www.instagram.com/robinsonscannabis/">Facebook</a>
+                  </p>
+                </li>
+              </ul>
+            </section>
 
           </main>
 
