--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
                   <a href="careers.html">Careers</a>
                 </li>
                 <li role="menuitem" class="internal-links">
-                  <a href="">Shop</a>
+                  <a href="shop.html">Shop</a>
                 </li>
                 <li role="menuitem" class="internal-links">
-                  <a href="">About</a>
+                  <a href="contact.html">Contact</a>
                 </li>
                 <li role="menuitem" class="internal-links">
                   <a href="">Newsletter</a>
@@ -149,7 +149,7 @@
                     </p>
                   </div>
                 </section>
-<!-- 
+<!--
                 <section id="imgAlone">
                   <img src="images/black-bags.jpg" alt="">
                 </section> -->
