--- a/shop.html
+++ b/shop.html
@@ -45,72 +45,38 @@
           </header>
 
 
-          <main id="main" class="careers" role="main">
+          <main id="main" class="shop" role="main">
 
-              <section id="intro" class="">
-                <div class="row center inner-width">
-                  <div class="column">
-                    <h1>
-                      Careers
-                    </h1>
-                    <h3>
-                      Help craft the next chapter of Robinsons Cannabis. We’re always looking
-                      for talented, passionate individuals to join our team. If no current
-                      openings match your qualifications or interest, please email us your cover
-                      letter and resume and let us know why you would make a great fit.
-                    </h3>
+                <section id="intro" class="">
+                  <div class="row center inner-width">
+                    <div class="column">
+                      <h1>
+                        Shop
+                      </h1>
+                      <h3>
+                        For the discerning consumer. Robinsons Cannabis accessories and apparel
+                        will soon be available for purchase. Subscribe to our newsletter to receive the most current updates and announcements.
+                      </h3>
+                      <h3 class="italic">
+                        Coming Soon
+                      </h3>
+                    </div>
                   </div>
-                </div>
-              </section>
-
-              <section id="jobs" class="inner-width">
-                <div class="row job">
-                    <div class="column _25">
-                      <p class="title">
-                        Executive
-                        Administrative Assistant
-                      </p>
-                    </div>
-                    <div class="column _75">
-                      <p class="description">
-                        We’re currently seeking an Executive Administrative Assistant to join our growing team on a part-time basis from date of hire until February 3, 2019. As of February 4, 2019, this role will become full-time in nature.
-                      </p>
-                      <p>
-                        View full job listing here
-                      </p>
-                    </div>
-                </div>
-                <div class="row job">
-                    <div class="column _25">
-                      <p class="title">
-                        Executive
-                        Administrative Assistant
-                      </p>
-                    </div>
-                    <div class="column _75">
-                      <p class="description">
-                        We’re currently seeking an Executive Administrative Assistant to join our growing team on a part-time basis from date of hire until February 3, 2019. As of February 4, 2019, this role will become full-time in nature.
-                      </p>
-                      <p>
-                        View full job listing here
-                      </p>
-                    </div>
-                </div>
-              </section>
+                </section>
 
           </main>
 
 
-          <footer id="footer" role="contentinfo">
+          <footer id="footer" class="shop" role="contentinfo">
                 <div id="logos" class="row center">
                       <div id="thistle" class="column">
-                        <img src="images/SVG/thistle-logo.svg" alt="">
+                        <img src="images/SVG/thistle-logo-white.svg" alt="">
                         <p class="small">
                           Robinsons Annapolis Valley Cirsium
                         </p>
                       </div>
                       <div id="lighthouse" class="column">
-                        <img src="images/SVG/lighthouse-logo.svg" alt="">
+                        <img src="images/SVG/lighthouse-logo-white.svg" alt="">
                         <p class="small">
                             Robinsons Annapolis Valley Brier Island
                         </p>
