update: contact map src

--- a/contact.html
+++ b/contact.html
@@ -54,7 +54,7 @@
                     Contact
                   </h1>
                   <figure>
-                    <img src="images/Robinsons_map.jpg" alt="">
+                    <img src="https://raw.githubusercontent.com/ianauxly/robinsons-static/master/images/Robinsons_Map.jpg" alt="">
                   </figure>
                   <h3>
                     Thank you for your interest. For all enquiries
