update: text to lower-case capital

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                   Newsletter
                 </li>
                 <li role="menuitem" id="home-button">
-                  <a href="index.html">Robinsons Cannabis</a>
+                  <a href="index.html">robinsons cannabis</a>
                 </li>
                 <li role="menuitem" class="social-links">
                   <a href="https://www.instagram.com/robinsonscannabis/" target="_blank">Instagram</a>
