update: disable scroll when overlay open

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 </section>
 
                 <section id="tagline" class="row center blockquote inner-width">
-                    <h2>Established M . M . X .V. I . I . I . </h2>
+                    <h3 class="small-caps">Established M . M . X .V. I . I . I . </h3>
                     <h3>
                       Robinsons is Canada’s premier producer of fine crafted cannabis.
                       <br>
@@ -101,7 +101,7 @@
 
                 <section id="about" class="row center">
                   <div class="inner-width square">
-                    <h2>Our Story</h2>
+                    <h3 class="small-caps">Our Story</h3>
                     <h3>
                       It begins with a plant: Cannabis sativa /Cannabis indica. This beautiful, complex plant inspired Founder and Master Grower Andrew Robinson to pursue a formal education in Plant Sciences and Technology at Dalhousie University and Nova Scotia Agricultural College, respectively. Both a passionate connoisseur as well as an intrepid visionary, Andrew brings over XX years’ experience to his craft, his namesake product now a measure of both quality and esteem. Upon assembling an expert team of growers, cultivators, XX, and XY, Robinsons Cannabis was established in XXXX. As our operations continue to grow, our focus remains resolute: produce an unparalleled, premium product, one which will both elevate and enhance Canadians’ unique personal cannabis experience.
                     </h3>
@@ -181,7 +181,7 @@
 
                 <section id="region" class="row center">
                   <div class="inner-width square">
-                    <h2>The Region</h2>
+                    <h3 class="small-caps">The Region</h3>
                     <h3>
                       Located at the base of two vast mountain ranges adjacent to the Atlantic Ocean, the sun-kissed Annapolis Valley experiences a mild
                       micro-climate, producing consistent temperatures and evenly-
