add: 404, terms, privacy update: footer with terms and privacy

--- a/careers.html
+++ b/careers.html
@@ -92,6 +92,19 @@
                 <div class="row job">
                     <div class="column _25">
                       <p class="title">
+                        Future Opportunities
+                      </p>
+                    </div>
+                    <div class="column _75">
+                      <p class="description">
+                        We’re always looking for talented individuals to join our team. Don’t see an opening
+                        currently? Feel free to email us your cover letter and resume and let us know why you’d make a great fit.
+                      </p>
+                    </div>
+                </div>
+                <div class="row job">
+                    <div class="column _25">
+                      <p class="title">
                         Executive
                         Administrative Assistant
                       </p>
@@ -143,6 +156,17 @@
                 </div>
 
                 <div id="contentinfo" class="inner-width">
+                      <ul class="row">
+                        <li class="column">
+                          <a class="small-caps" href="terms.html">Terms and Conditions</a>
+                        </li>
+                        <li class="column">
+                          /
+                        </li>
+                        <li class="column">
+                          <a class="small-caps" href="privacy.html">Privacy Policy</a>
+                        </li>
+                      </ul>
                       <ul id="contact" class="row">
                         <li class="column">
                           <span>Address</span>
