--- a/index.html
+++ b/index.html
@@ -278,6 +278,17 @@
                 </div>
 
                 <div id="contentinfo" class="inner-width">
+                      <ul class="row">
+                        <li class="column">
+                          <a class="small-caps" href="terms.html">Terms and Conditions</a>
+                        </li>
+                        <li class="column">
+                          /
+                        </li>
+                        <li class="column">
+                          <a class="small-caps" href="privacy.html">Privacy Policy</a>
+                        </li>
+                      </ul>
                       <ul id="contact" class="row">
                         <li class="column">
                           <span>Address</span>
