--- a/privacy.html
+++ b/privacy.html
@@ -26,7 +26,7 @@
                   Newsletter
                 </li>
                 <li role="menuitem" id="home-button">
-                  <a href="index.html">Robinsons Cannabis</a>
+                  <a href="index.html">robinsons cannabis</a>
                 </li>
                 <li role="menuitem" class="social-links">
                   <a href="https://www.instagram.com/robinsonscannabis/" target="_blank">Instagram</a>
@@ -70,38 +70,31 @@
           </header>
 
 
-          <main id="main" class="shop" role="main">
+          <main id="main" class="terms" role="main">
 
-                <section id="intro" class="">
-                  <div class="row center inner-width">
-                    <div class="column">
-                      <h1>
-                        Shop
-                      </h1>
-                      <h3>
-                        For the discerning consumer. Robinsons Cannabis accessories and apparel
-                        will soon be available for purchase. Subscribe to our newsletter to receive the most current updates and announcements.
-                      </h3>
-                      <h3 class="italic">
-                        Coming Soon
-                      </h3>
-                    </div>
-                  </div>
-                </section>
+            <section id="intro" class="">
+              <div class="row center inner-width">
+                <div class="column">
+                  <h1>
+                    Privacy
+                  </h1>
+                </div>
+              </div>
+            </section>
 
           </main>
 
 
-          <footer id="footer" class="shop" role="contentinfo">
+          <footer id="footer" role="contentinfo">
                 <div id="logos" class="row center">
                       <div id="thistle" class="column">
-                        <img src="images/SVG/thistle-logo-white.svg" alt="">
+                        <img src="images/SVG/thistle-logo.svg" alt="">
                         <p class="small">
                           Robinsons Annapolis Valley Cirsium
                         </p>
                       </div>
                       <div id="lighthouse" class="column">
-                        <img src="images/SVG/lighthouse-logo-white.svg" alt="">
+                        <img src="images/SVG/lighthouse-logo.svg" alt="">
                         <p class="small">
                             Robinsons Annapolis Valley Brier Island
                         </p>
@@ -153,9 +146,9 @@
                 </div>
           </footer>
 
-    </div>
+  </div>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="js/main-min.js"></script>
-</body>
+  </body>
 </html>
