--- a/404.html
+++ b/404.html
@@ -26,7 +26,7 @@
                   Newsletter
                 </li>
                 <li role="menuitem" id="home-button">
-                  <a href="index.html">Robinsons Cannabis</a>
+                  <a href="index.html">robinsons cannabis</a>
                 </li>
                 <li role="menuitem" class="social-links">
                   <a href="https://www.instagram.com/robinsonscannabis/" target="_blank">Instagram</a>
@@ -70,38 +70,39 @@
           </header>
 
 
-          <main id="main" class="shop" role="main">
+          <main id="main" class="404" role="main">
 
-                <section id="intro" class="">
-                  <div class="row center inner-width">
-                    <div class="column">
-                      <h1>
-                        Shop
-                      </h1>
-                      <h3>
-                        For the discerning consumer. Robinsons Cannabis accessories and apparel
-                        will soon be available for purchase. Subscribe to our newsletter to receive the most current updates and announcements.
-                      </h3>
-                      <h3 class="italic">
-                        Coming Soon
-                      </h3>
-                    </div>
-                  </div>
-                </section>
+            <section id="intro" class="">
+              <div class="row center inner-width">
+                <div class="column">
+                  <h1>
+                    Page Not Found
+                  </h1>
+                  <h3>
+                    We couldn’t find any pages that matched your request.
+                    <br>
+                    Click <a href="index.html" class="italic">here</a> to return to site.
+                  </h3>
+                  <p class="small-caps">
+                    Error 4o4
+                  </p>
+                </div>
+              </div>
+            </section>
 
           </main>
 
 
-          <footer id="footer" class="shop" role="contentinfo">
+          <footer id="footer" role="contentinfo">
                 <div id="logos" class="row center">
                       <div id="thistle" class="column">
-                        <img src="images/SVG/thistle-logo-white.svg" alt="">
+                        <img src="images/SVG/thistle-logo.svg" alt="">
                         <p class="small">
                           Robinsons Annapolis Valley Cirsium
                         </p>
                       </div>
                       <div id="lighthouse" class="column">
-                        <img src="images/SVG/lighthouse-logo-white.svg" alt="">
+                        <img src="images/SVG/lighthouse-logo.svg" alt="">
                         <p class="small">
                             Robinsons Annapolis Valley Brier Island
                         </p>
