update: terms and privacy with example listing

--- a/terms.html
+++ b/terms.html
@@ -82,6 +82,25 @@
               </div>
             </section>
 
+
+            <section class="inner-width">
+              <div class="row">
+                  <div class="column _25">
+                    <p class="title small-caps">
+                      Website Terms of Use
+                    </p>
+                  </div>
+                  <div class="column _75">
+                    <p class="description">
+                      Please read these terms of use carefully as they contain important information regarding your legal rights, remedies and obligations. These include various disclaimers, indemnities and limitations of liabilities.
+                    </p>
+                    <p class="description">
+                      Please read these terms of use carefully as they contain important information regarding your legal rights, remedies and obligations. These include various disclaimers, indemnities and limitations of liabilities.
+                    </p>
+                  </div>
+              </div>
+            </section>
+
           </main>
 
 
