--- a/careers.html
+++ b/careers.html
@@ -91,12 +91,12 @@
               <section id="jobs" class="inner-width">
                 <div class="row job">
                     <div class="column _25">
-                      <p class="title">
+                      <p class="title small-caps">
                         Future Opportunities
                       </p>
                     </div>
                     <div class="column _75">
-                      <p class="description">
+                      <p>
                         We’re always looking for talented individuals to join our team. Don’t see an opening
                         currently? Feel free to email us your cover letter and resume and let us know why you’d make a great fit.
                       </p>
@@ -104,13 +104,13 @@
                 </div>
                 <div class="row job">
                     <div class="column _25">
-                      <p class="title">
+                      <p class="title small-caps">
                         Executive
                         Administrative Assistant
                       </p>
                     </div>
                     <div class="column _75">
-                      <p class="description">
+                      <p>
                         We’re currently seeking an Executive Administrative Assistant to join our growing team on a part-time basis from date of hire until February 3, 2019. As of February 4, 2019, this role will become full-time in nature.
                       </p>
                       <p>
@@ -120,13 +120,13 @@
                 </div>
                 <div class="row job">
                     <div class="column _25">
-                      <p class="title">
+                      <p class="title small-caps">
                         Executive
                         Administrative Assistant
                       </p>
                     </div>
                     <div class="column _75">
-                      <p class="description">
+                      <p>
                         We’re currently seeking an Executive Administrative Assistant to join our growing team on a part-time basis from date of hire until February 3, 2019. As of February 4, 2019, this role will become full-time in nature.
                       </p>
                       <p>
