--- a/privacy.html
+++ b/privacy.html
@@ -70,7 +70,7 @@
           </header>
 
 
-          <main id="main" class="terms" role="main">
+          <main id="main" class="privacy" role="main">
 
             <section id="intro" class="">
               <div class="row center inner-width">
@@ -79,6 +79,23 @@
                     Privacy
                   </h1>
                 </div>
+              </div>
+            </section>
+
+            <section class="inner-width">
+              <div class="row">
+                  <div class="column _25">
+                    <p class="title small-caps">
+                      Privacy Policy
+                    </p>
+                  </div>
+                  <div class="column _75">
+                    <p>
+                      At Robinsons Project Inc. (“Robinsons”), we are committed to maintaining the accuracy, confidentiality and security of your personal information. This Privacy Policy describes the personal information that Robinsons collects from or about you, how we use, and to whom we disclose that information.                    </p>
+                    <p>
+                      Robinsons has adopted a series of Privacy Policies in order to address the specific privacy concerns of certain groupings of individuals. This Privacy Policy applies to how we collect, use and disclose the personal information of our customers, suppliers and other parties with whom we interact. We have developed other documents that describe our privacy policies and practices with respect to our employees (i.e. our “Employee Privacy Policy”). If you are unsure of which Privacy Policy applies to you, please contact our Privacy Officer for more information.
+                    </p>
+                  </div>
               </div>
             </section>
 
