update: copy for terms and privacy

--- a/privacy.html
+++ b/privacy.html
@@ -91,9 +91,37 @@
                   </div>
                   <div class="column _75">
                     <p>
-                      At Robinsons Project Inc. (“Robinsons”), we are committed to maintaining the accuracy, confidentiality and security of your personal information. This Privacy Policy describes the personal information that Robinsons collects from or about you, how we use, and to whom we disclose that information.                    </p>
+                      At Robinsons Project Inc. (“Robinsons”), we are committed to maintaining the accuracy, confidentiality and security of your personal information. This Privacy Policy describes the personal information that Robinsons collects from or about you, how we use, and to whom we disclose that information.
+                    </p>
                     <p>
                       Robinsons has adopted a series of Privacy Policies in order to address the specific privacy concerns of certain groupings of individuals. This Privacy Policy applies to how we collect, use and disclose the personal information of our customers, suppliers and other parties with whom we interact. We have developed other documents that describe our privacy policies and practices with respect to our employees (i.e. our “Employee Privacy Policy”). If you are unsure of which Privacy Policy applies to you, please contact our Privacy Officer for more information.
+                    </p>
+                  </div>
+              </div>
+              <div class="row">
+                  <div class="column _25">
+                    <p class="title small-caps">
+                      Privacy Policy Effective for Canada
+                    </p>
+                  </div>
+                  <div class="column _75">
+                    <p>
+                      It is Robinsons policy to comply with the privacy legislation within each jurisdiction in which we operate. Sometimes the privacy legislation and/or an individual’s right to privacy are different from one jurisdiction to another. This Privacy Policy covers only those activities that are subject to the provisions of Canada's federal and provincial privacy laws, as applicable.
+                    </p>
+                    <p>
+                    This Privacy Policy has a limited scope and application. Consequently, the rights and obligations contained in this Privacy Policy may not be available to all individuals or in all jurisdictions. If you are unsure if or how this Privacy Policy applies to you, please contact our Privacy Officer for more information.
+                    </p>
+                  </div>
+              </div>
+              <div class="row">
+                  <div class="column _25">
+                    <p class="title small-caps">
+                      What is Personal Information?
+                    </p>
+                  </div>
+                  <div class="column _75">
+                    <p>
+                      For the purposes of this Privacy Policy, personal information is any information about an identifiable individual, other than an individual's business contact information when collected, used or disclosed for the purposes of enabling the individual to be contacted in relation to their business responsibilities.
                     </p>
                   </div>
               </div>
