--- a/terms.html
+++ b/terms.html
@@ -91,11 +91,143 @@
                     </p>
                   </div>
                   <div class="column _75">
-                    <p class="description">
+                    <p>
                       Please read these terms of use carefully as they contain important information regarding your legal rights, remedies and obligations. These include various disclaimers, indemnities and limitations of liabilities.
                     </p>
-                    <p class="description">
-                      Please read these terms of use carefully as they contain important information regarding your legal rights, remedies and obligations. These include various disclaimers, indemnities and limitations of liabilities.
+                    <p>
+                      This website is owned and operated by Robinsons Project Inc. (“Robinsons”, “we” and “us”), a company incorporated under the laws of the Province of Ontario with an address at 55 Bruce Crescent, Carleton Place, Ontario, Canada k7c 3t3. Access and use of this website (“Website”) and its related services (the “Services”) are provided by Robinsons to you on condition that you accept these terms of use. By accessing or using this Website or the Services (including the purchase of any products offered on this Website (“Products”)), you agree to these Terms of Use. If you do not agree to accept these terms of use, you may not access or use this Website or the Services.
+                    </p>
+                    <p>
+                      These Terms of Use govern the relationship between you and Robinsons with respect to your use of this Website and its related Services. You agree that the agreement formed by these Terms of Use is like any written negotiated agreement signed by you, and you agree to be bound by, and fully comply with, its terms. You represent and warrant that you have all necessary right, power and authority to enter into these Terms of Use and to perform and otherwise discharge all of your obligations hereunder.
+                    </p>
+                    <p>
+                      You understand that aspects of this Website and the Services may not be available in all jurisdictions and that you are responsible for ensuring that it is lawful for you to use this Website and receive the Services in your jurisdiction.
+                    </p>
+                    <p>
+                      We reserve the right at any time to change: (i) the terms and conditions of these Terms of Use; (ii) this Website or the Services, including terminating, eliminating, supplementing, modifying, adding or discontinuing any content or feature or data or service on or available through this Website or the Services or the hours that they are available; (iii) any fees or charges, if any, related to the use of this Website or the Services; and (iv) the equipment, hardware or software required to use and access this Website or the Services.
+                    </p>
+                    <p>
+                      Any changes we make to these Terms of Use will be effective immediately upon posting on this Website. Be sure to return to this Website periodically to ensure you are familiar with the most current version of these Terms of Use.
+                    </p>
+                  </div>
+              </div>
+              <div class="row">
+                  <div class="column _25">
+                    <p class="title small-caps">
+                      1. use of this website
+                    </p>
+                  </div>
+                  <div class="column _75">
+                    <p>
+                      If you are residing in a jurisdiction which restricts the use of internet-based applications according to age, or which restricts the ability to enter into agreements such as set out in these Terms of Use according to age and you are under such a jurisdiction and under such age limit, you may not enter into these Terms of Use or use this Website or the Services.
+                    </p>
+                    <p>
+                      Furthermore, if you are residing in a jurisdiction where it is forbidden by law to participate in the activities offered by this Website or the Services, you may not enter into these Terms of Use or use this Website or the Services. By using this Website you are explicitly stating that you have verified in your own jurisdiction that your use of this Website and the Services is allowed.
+                    </p>
+                    <p>
+                      You may only access and use this Website for legitimate purposes and not for any illegal or unauthorized purpose, including without limitation, in violation of any criminal law, intellectual property law, privacy law or any other applicable law or regulation. You represent and warrant that you are at least the age of majority in your jurisdiction of residence and are legally capable of entering into a binding contract.
+                    </p>
+                    <p>
+                      Your Account may be deleted and these Terms of Use may be suspended or terminated without warning, if we believe that you are under age or your use of this Website or the Services is not allowed.
+                    </p>
+                  </div>
+              </div>
+              <div class="row">
+                  <div class="column _25">
+                    <p class="title small-caps">
+                      2. privacy
+                    </p>
+                  </div>
+                  <div class="column _75">
+                    <p>
+                      Robinsons is committed to respecting the privacy of the personal information of the individuals with whom we interact. We have developed a Privacy Policy to describe our privacy policies and practices and how we collect, use and disclose the personal information of those individuals who visit this Website or use the Services. Please see our Privacy Policy at https://robinsonsproject.com/privacy for further details.
+                    </p>
+                    <p>
+                      You acknowledge and agree that access to and use of this Website and the Services is provided via the internet and that your information, including personal information, may be transferred across national borders and stored or processed in any country in the world.
+                    </p>
+                  </div>
+              </div>
+              <div class="row">
+                  <div class="column _25">
+                    <p class="title small-caps">
+                      3. services
+                    </p>
+                  </div>
+                  <div class="column _75">
+                    <p>
+                      In order to access and use certain of the Services available on this Website (including the purchase of Products), you may need to sign up for, open and maintain an account (“Account”) with us. Prior to completing the signup process for your Account, you may be required to confirm your acceptance of all of the terms and conditions of these Terms of Use. If you do not agree to these Terms of Use, you may not sign up for an Account and you shall not have the right to use such Services.
+                    </p>
+                    <p>
+                      You agree at all times to: (i) provide accurate, current and complete information about yourself as prompted by our registration form or otherwise; and (ii) maintain and update your information (including your e-mail address) to keep it accurate, current and complete.
+                    </p>
+                    <p>
+                      You must not choose a username that infringes the rights of any third party or which is offensive, racist, obscene, hurtful, unlawful or otherwise inappropriate. You agree not to transfer your right to use or access this Website or the Services via your username or password to any third person.
+                    </p>
+                    <p>
+                      You are entirely responsible for maintaining the confidentiality of your username and password and for any and all activities (including purchases and charges, as applicable) that are conducted through your account.
+                    </p>
+                    <p>
+                      You may not use the account, username, or password of anyone else at any time. You agree to notify us immediately of any unauthorized use, theft or misappropriation of your account, username, or password. We shall not be liable for any loss that you incur as a result of someone else using your username or password, either with or without your knowledge.
+                    </p>
+                    <p>
+                      We hereby disclaim any and all responsibility or liability for any unauthorized use of your Account.
+                    </p>
+                  </div>
+              </div>
+              <div class="row">
+                  <div class="column _25">
+                    <p class="title small-caps">
+                      4. products
+                    </p>
+                  </div>
+                  <div class="column _75">
+                    <p>
+                      This Website may allow you to purchase Products from time to time. We reserve the right to refuse service to anyone, at any time, for any reason, subject to our regulatory obligations under: (i) the federal Cannabis Act (the “Act”); and (ii) any other applicable legislation.
+                    </p>
+                    <p>
+                      Should you choose to purchase a product, please note that advertisements on this Website for Products are invitations to you to make offers to purchase Products and are not offers to sell. Your properly completed and delivered order form constitutes your offer to purchase the Products referenced in your order. Your order for a Product will be deemed to be accepted only if and when we send an order confirmation to your email address. That confirmation constitutes our acceptance of your order.
+                    </p>
+                    <p>
+                      Some situations may result in your order for Product(s) being cancelled. These include, but are not limited to: (i) limitations on the quantities of any Products available for purchase; (ii) inaccuracies or errors in Product or pricing information; (iii) Product restrictions mandated by local, provincial, national or international regulations; and (iv) problems identified by our credit and fraud avoidance group. We may also require additional verifications or information before accepting any order.
+                    </p>
+                    <p>
+                      For the avoidance of doubt, we reserve the right, at our sole discretion, to limit quantities available for sale or sold, and the right at any time to reject, correct, cancel or terminate any order for any reason whatsoever. We will contact you if all or any portion of your order is cancelled or if additional information is required to accept your order. If your order is cancelled after your credit card has been charged, we will issue a credit to the credit card you used to make the purchase in the amount of the charge.
+                    </p>
+                    <p>
+                      Subject to applicable laws, we may amend this Website, and the Products listed on this Website, and/or the amounts that we charge for same at any time, without prior notice.
+                    </p>
+                    <p>
+                      Subject to section 7 below, all sales are final.
+                    </p>
+                  </div>
+              </div>
+              <div class="row">
+                  <div class="column _25">
+                    <p class="title small-caps">
+                      5. Payment
+                    </p>
+                  </div>
+                  <div class="column _75">
+                    <p>
+                      The prices displayed on this Website are quoted in Canadian dollars.
+                    </p>
+                    <p>
+                      Product prices do not include any applicable sales, use, excise, value-added or other taxes or governmental charges, and you shall be responsible for same. Also note that the price of any Product on our Website does not include shipping and handling or any applicable sales, use, excise, value-added or other taxes or duties. You are also responsible for the payment of same.
+                    </p>
+                    <p>
+                      Where you elect to purchase any Products, you agree to pay, through the payment mechanism selected by you and approved by us, all amounts due and owing for such Services as more particularly set out in the order confirmation provided at the time that you ordered such Services. Under no circumstances will we be responsible: (i) for any charges that your credit card issuer may apply to you as a result of our processing your order; (ii) if your card issuer refuses or fails to authorize payment by you; or (iii) for any delays or non-delivery of the item that you endeavored to purchase arising from any validation checks that may be carried out regarding your payment or identification.
+                    </p>
+                  </div>
+              </div>
+              <div class="row">
+                  <div class="column _25">
+                    <p class="title small-caps">
+                      6. Shipping Policy
+                    </p>
+                  </div>
+                  <div class="column _75">
+                    <p>
+                      Purchases will generally be shipped out within two to three business days via Canada Post or Purolator. As above, you are responsible for all shipping costs associated with your purchase.
                     </p>
                   </div>
               </div>
